--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,6 @@
 
 /* Override Bootstrap button styles */
-.btn-primary {
+.btn,-primary {
     background-color: white;
     border-color: #dad8d6;
     border-width: 2px;
@@ -36,3 +36,49 @@
     background-color: #00173b;
     font-style: italic;
 }
+
+.rc-slider {
+    background-color: #e7e7e7;
+}
+
+.rc-slider-step {
+
+}
+
+/* Slider Handle */
+.rc-slider-handle {
+    border: solid 3px #00634f;
+}
+
+/* Slider Handle (Hover) */
+.rc-slider-handle:hover, .rc-slider-handle:focus, .rc-slider-handle:active, .rc-slider-handle:active:focus, .rc-slider-handle-click-focused, .rc-slider-handle-click-focused:focus {
+    border: solid 3px #00634f;
+    box-shadow: 0 0 0 2px #08a384;
+}
+
+/* Slider Handle (Active) */
+.rc-slider-handle-dragging, .rc-slider-handle-dragging:active, .rc-slider-handle-dragging:focus, .rc-slider-handle-dragging:hover, .rc-slider-handle-dragging:active:focus, .rc-slider-handle-dragging.rc-slider-handle-dragging.rc-slider-handle-dragging {
+    border: solid 3px #00634f;
+    box-shadow: 0 0 0 4px #08a384;
+}
+
+
+
+.rc-slider-track {
+    background-color: #08a384;
+}
+
+.rc-slider-dot {
+    background-color: white;
+
+}
+
+.rc-slider-dot-active {
+    background-color: #00634f;
+    border-color: #08a384;
+}
+/*
+.rc-slider-mark-text {
+
+}
+*/
